<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/color_f0f2f4">

        <com.sum.common.view.TitleBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:middleText="@string/mine_setting" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginTop="@dimen/dp_10"
                android:paddingStart="@dimen/dp_14"
                android:paddingEnd="@dimen/dp_8"
                android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_user_info"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:paddingStart="@dimen/dp_6"
                    android:src="@mipmap/ic_next"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:paddingStart="@dimen/dp_14"
                android:background="@color/color_f0f2f4" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_account_safe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="@dimen/dp_14"
                android:paddingEnd="@dimen/dp_8"
                android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_account_safe"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:paddingStart="@dimen/dp_6"
                    android:src="@mipmap/ic_next"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="@dimen/dp_14"
                android:paddingEnd="@dimen/dp_8"
                android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_privacy_policy"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:paddingStart="@dimen/dp_6"
                    android:src="@mipmap/ic_next"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:layout_marginStart="@dimen/dp_14"
                android:background="@color/color_f0f2f4" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_current_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="@dimen/dp_14"
                android:paddingEnd="@dimen/dp_8"
                android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_current_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_current_version"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_newest_version"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:textColor="@color/color_898e92"
                    android:textSize="@dimen/text_size_12"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_current_version"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_current_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:paddingStart="@dimen/dp_6"
                    android:src="@mipmap/ic_next"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="@dimen/dp_14"
                android:paddingEnd="@dimen/dp_8"
                android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_clear_cache"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12MB"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:textColor="@color/color_898e92"
                    android:textSize="@dimen/text_size_12"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_clear_cache"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_clear_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:paddingStart="@dimen/dp_6"
                    android:src="@mipmap/ic_next"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:layout_marginStart="@dimen/dp_14"
                android:background="@color/color_f0f2f4" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="@dimen/dp_14"
                android:paddingEnd="@dimen/dp_8"
                android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_info_about"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:paddingStart="@dimen/dp_6"
                    android:src="@mipmap/ic_next"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_42"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@color/color_0165b8"
                android:gravity="center"
                android:text="@string/setting_logout"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"
                tools:ignore="MissingConstraints" />
    </LinearLayout>
</layout>